--- a/firstStep/firstStep.css
+++ b/firstStep/firstStep.css
@@ -44,7 +44,7 @@ h1 {
  }
 
 .arrow {
-  height: 1em;
+  height: 1.3em;
 }
 .circle {
   border-radius: 50%;
@@ -61,4 +61,22 @@ h1 {
   background: none;
   position:relative;
   height: 0;
+ }
+
+ .menu::before,
+ .menu::after {
+ 	content:"";
+ 	display: block;
+ 	width: 3px;
+ 	height: 3px;
+ 	border-radius: 50%;
+ 	background-color: var(--color-text);
+ 	position: absolute;
+ }
+
+ .meniu::before {
+ 	top:-6px;
+ }
+ .meniu::after {
+ 	bottom:-6px;
  }
