--- a/firstStep/firstStep.css
+++ b/firstStep/firstStep.css
@@ -49,6 +49,7 @@ h1 {
 .circle {
   border-radius: 50%;
 }
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -79,4 +80,11 @@ h1 {
  }
  .meniu::after {
  	bottom:-6px;
+ }
+
+ .center{
+  display: grid;
+  justify-content: space-between;
+  align-items: center;
+  margin:1.5em 3em;
  }
