--- a/firstStep/firstStep.css
+++ b/firstStep/firstStep.css
@@ -2,89 +2,83 @@
   --spacing: 15px;
   --color-text: #192224;
   --color-grey: #808080;
-}
-
+ }
 html {
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
-  color:var(--color-text);
-  
-}
-
+  color: var(--color-text);
+    }
 body {
-	background-image: linear-gradient(#dfebed, #d0dadb);
+  background-image: linear-gradient(#dfebed, #d0dadb);
   min-height: 100vh;
   margin: 0;
-}
-
-h1 {
-	margin: 0;
-}
-  
+   }
+ h1 {
+   margin: 0;
+ }
 .container {
-	background-image: linear-gradient(#f0f7f7, #f7feff);
-  width: 400px;
-  margin:  2rem auto;
-  overflow: hidden;
-  border-radius: var(--spacing);
-  box-sizing: border-box;
-}
+  background-image: linear-gradient(#f0f7f7, #f7feff);
+ width: 400px;
+ margin: 2rem auto;
+ overflow: hidden;
+ border-radius: var(--spacing);
+ box-sizing: border-box;
+ }
 .container-header {
-  background-image: linear-gradient (#fbfcfc, #f4fefe);
-  box-shadow: 0 5px 5px 0 rgba(10, 101, 187, 0.1);
-  border-radius: var(--spacing);
-}
-
+ background-image: linear-gradient (#fbfcfc, #f4fefe);
+ box-shadow: 0 5px 5px 0 rgba(10, 101, 187, 0.1);
+ border-radius: var(--spacing);
+ }
 .padded {
   padding: var(--spacing);
 }
-
-.muted{
-   color:var(--color-grey);
+.muted {
+   color: var(--color-grey);
  }
-
 .arrow {
-  height: 1.3em;
-}
+ height: 1.3em;
+ }
 .circle {
-  border-radius: 50%;
-}
-
+ border-radius: 50%;
+ }
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 1em 0;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ margin: 1em 0;
+ }
+.menu {
+ text-indent: -9999em;
+border: 0;
+background: none;
+position: relative;
+height: 0;
+ }
+.menu::before,
+.menu::after {
+content: "";
+display: block;
+width: 3px;
+height: 3px;
+border-radius: 50%;
+background-color: var(--color-text);
+position: absolute;
+ }
+.meniu::before {
+  top: -6px;
+ }
+.meniu::after {
+bottom: -6px;
+ }
+.center {
+display: grid;
+justify-content: space-between;
+align-items: center;
+margin: 1em 0;
+  }
+dl {
+display: grid;
 }
- .menu {
-  text-indent: -9999em;
-  border: 0;
-  background: none;
-  position:relative;
-  height: 0;
- }
-
- .menu::before,
- .menu::after {
- 	content:"";
- 	display: block;
- 	width: 3px;
- 	height: 3px;
- 	border-radius: 50%;
- 	background-color: var(--color-text);
- 	position: absolute;
- }
-
- .meniu::before {
- 	top:-6px;
- }
- .meniu::after {
- 	bottom:-6px;
- }
-
- .center{
-  display:grid;
-  justify-content: space-between;
-  align-items: center;
-  margin:1em 0;
- }
+input {
+border-radius: 10%;
+}
