--- a/firstStep/firstStep.css
+++ b/firstStep/firstStep.css
@@ -189,3 +189,21 @@ dl {
     transform: rotate(45deg);
     
 }
+.card {
+    position: relative;
+    background: white;
+    box-shadow: 0 5px 5px 0 rgba(10, 101, 187, 0.1);
+    border-radius: var(--spacing);
+    text-indent: middle;
+    box-sizing: content-box;
+}
+}
+
+.card img{
+    box-sizing: border-box;
+    border: solid #5B6DCD 10px;
+    padding: 5px;
+    width: 50%;
+    height: 50%;
+    border-radius: 50%;
+}
