--- a/firstStep/firstStep.css
+++ b/firstStep/firstStep.css
@@ -148,7 +148,7 @@ h1 {
 .card {
     position: relative;
     background: white;
-    box-shadow: 0 5px 5px 0 rgba(10, 101, 187, 0.1);
+    box-shadow: 0 0 5px 0 rgba(10, 101, 187, 0.1);
     border-radius: var(--spacing);
     text-indent: middle;
     box-sizing: content-box;
@@ -156,11 +156,10 @@ h1 {
 
 .card img{
     box-sizing: border-box;
-    border: solid #5B6DCD 10px;
-    padding: 5px;
-    width: 50%;
-    height: 50%;
-    border-radius: 50%;
+    border: solid none 1px;
+    width: 100%;
+    height: 100%;
+    border-radius: var(--spacing);
 }
 
 .stats {
@@ -260,8 +259,4 @@ h1 {
     background-position: center; 
     background-size: 50%;
     background-repeat: no-repeat;
-}
-
-.crayon {
-
 }
