--- a/firstStep/firstStep.css
+++ b/firstStep/firstStep.css
@@ -81,11 +81,11 @@ h1 {
     position: absolute;
 }
 
-.meniu::before {
+.menu::before {
     top: -6px;
 }
 
-.meniu::after {
+.menu::after {
     bottom: -6px;
 }
 
@@ -144,40 +144,7 @@ h1 {
     right: 8px;
     transform: rotate(45deg);
     
-}
-.card {
-    position: relative;
-    background: white;
-    box-shadow: 0 0 5px 0 rgba(10, 101, 187, 0.1);
-    border-radius: var(--spacing);
-    text-indent: middle;
-    box-sizing: content-box;
-}
-
-.card img{
-    box-sizing: border-box;
-    border: solid none 1px;
-    width: 100%;
-    height: 100%;
-    border-radius: var(--spacing);
-}
-
-.stats {
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto auto;
-    justify-items: center;
-    margin-top: 2em;
-}
-.stats dt {
-    color: var(--color-grey);
-}
-.stats dd{
-    margin: 0;
-    font-weight: 600;
-}
-
+} 
 .wrapper {
   display: grid;
   padding: var(--spacing);
@@ -213,6 +180,101 @@ h1 {
   background-size: cover;
   border-radius: var(--spacing);
 }
+
+.wrapper2 {
+	display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: "a b c d";
+    box-sizing: border-box;
+    box-shadow: 0;
+    position: relative;
+}
+
+  .itemA button {
+  	text-indent: -9999em;
+  	top: 2px;
+  	left: 3px;
+  	width: 75px;
+    height: 75px;
+    display:block;
+    border: 1px rgba(255,255,255, 0.2) solid;
+    box-shadow: none;
+    border-radius: 50%;
+    cursor: pointer;
+    background: url("plus.svg");
+    background-color: white;
+    background-position: center; 
+    background-size: 20%;
+    background-repeat: no-repeat;
+    grid-area: a;
+  }
+.itemB {
+	grid-area: b;
+	background-image: url(https://picsum.photos/id/1005/60);
+    background-position: center;
+    background-size: cover;
+    border-radius: 50%;
+    width: 75px;
+    height: 75px;
+   }
+.itemC {
+	grid-area: c;
+	background-image: url(https://picsum.photos/id/1005/60);
+    background-position: center;
+    background-size: cover;
+    border-radius: 50%;
+    width: 75px;
+    height: 75px;
+}
+.itemD {
+	grid-area: d;
+	background-image: url(https://picsum.photos/id/1005/60);
+    background-position: center;
+    background-size: cover;
+    border-radius: 50%;
+    width: 75px;
+    height: 75px;
+}
+
+.card {
+    position: relative;
+    background: white;
+    box-shadow: 0 0 5px 0 rgba(10, 101, 187, 0.1);
+    border-radius: var(--spacing);
+    text-indent: middle;
+    box-sizing: content-box;
+}
+
+.square{
+    box-sizing: border-box;
+    border: solid none 1px;
+    width: 100%;
+    height: 100%;
+    border-radius: var(--spacing);
+}
+#dot {
+	padding-left: 12em;
+}
+
+
+.stats {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    justify-items: center;
+    margin-top: 2em;
+}
+.stats dt {
+    color: var(--color-grey);
+}
+.stats dd{
+    margin: 0;
+    font-weight: 600;
+}
+
+
 .chat {
     display: grid;
 }
@@ -241,6 +303,7 @@ h1 {
     height: 90px;
     box-shadow: 0;
 }
+
 
 .new button {
     position: absolute;
