--- a/firstStep/firstStep.css
+++ b/firstStep/firstStep.css
@@ -185,77 +185,116 @@ h1 {
 }
 
 .wrapper2 {
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-areas: "a b c d";
-    grid-gap: 10px;
-    box-sizing: border-box;
-    box-shadow: 0;
-    position: relative;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+  width:400px; 
+  height: 100px;
 }
-.wrapper::-webkit-scrollbar {
-  display: none;
+
+.inner {
+  position: relative;
+  height: 120px;
+  width:auto;
+  white-space:nowrap;
 }
+
 .slide{
+  padding: 12px;
+  border-radius: 50%;
+  width: 65px;
+  height: 65px;
+  margin: 5px;
+}
+.inline {
+   vertical-align: middle;
+   overflow-x: scroll;
+   -ms-overflow-style: none;
+   scrollbar-width: none;
+}
+.inline::-webkit-scrollbar {
+  display: none;
+  }
+
+.inline-slide {
   display: inline-block;
-  text-align: center;
-  padding: 10px;
+  vertical-align: middle;
 }
 
 
   .one {
     text-indent: -9999em;
-    top: 1px;
-    left: 2px;
-    width: 75px;
-    height: 75px;
-    display:block;
     border: 2px rgba(255,255,255, 0.2) solid;
     box-shadow: none;
-    border-radius: 50%;
     cursor: pointer;
     background: url("plus.svg");
     background-color: white;
     background-position: center; 
     background-size: 20%;
     background-repeat: no-repeat;
-    grid-area: a;
   }
 .two {
-    grid-area: b;
     background-image: url(https://picsum.photos/id/1005/60);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    border-radius: 50%;
     border: 2px solid pink;
-    width: 75px;
-    height: 75px;
    }
 .three {
-    grid-area: c;
     background-image: url(https://picsum.photos/id/1005/60);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    border-radius: 50%;
     border: 2px solid pink;
-    width: 75px;
-    height: 75px;}
+}
 
 .four {
-    grid-area: d;
     background-image: url(https://picsum.photos/id/1005/60);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    border-radius: 50%;
     border:2px solid pink;
-    width: 75px;
-    height: 75px;
+
 }
+.five {
+    background-image: url(https://picsum.photos/id/1005/60);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: 2px solid pink;
+   }
+.six {
+    background-image: url(https://picsum.photos/id/1005/60);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: 2px solid pink;
+   }
+.seven {
+    background-image: url(https://picsum.photos/id/1005/60);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: 2px solid pink;
+   }
+.eight {
+    background-image: url(https://picsum.photos/id/1005/60);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: 2px solid pink;
+   }
+ .nine {
+    background-image: url(https://picsum.photos/id/1005/60);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: 2px solid pink;
+   }
+.ten {
+    background-image: url(https://picsum.photos/id/1005/60);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: 2px solid pink;
+   }
 
 .card {
     position: relative;
